syntax = "proto3";
package penumbra.core.component.governance.v1;

import "google/protobuf/any.proto";
import "penumbra/core/asset/v1/asset.proto";
import "penumbra/core/component/auction/v1/auction.proto";
import "penumbra/core/component/community_pool/v1/community_pool.proto";
import "penumbra/core/component/dex/v1/dex.proto";
import "penumbra/core/component/distributions/v1/distributions.proto";
import "penumbra/core/component/fee/v1/fee.proto";
import "penumbra/core/component/funding/v1/funding.proto";
import "penumbra/core/component/ibc/v1/ibc.proto";
import "penumbra/core/component/sct/v1/sct.proto";
import "penumbra/core/component/shielded_pool/v1/shielded_pool.proto";
import "penumbra/core/component/stake/v1/stake.proto";
import "penumbra/core/keys/v1/keys.proto";
import "penumbra/core/num/v1/num.proto";
import "penumbra/crypto/decaf377_rdsa/v1/decaf377_rdsa.proto";

// A Penumbra ZK delegator vote proof.
message ZKDelegatorVoteProof {
  bytes inner = 1;
}

message ProposalSubmit {
  // The proposal to be submitted.
  governance.v1.Proposal proposal = 1;
  // The amount of the proposal deposit.
  num.v1.Amount deposit_amount = 3;
}

message ProposalWithdraw {
  // The proposal to be withdrawn.
  uint64 proposal = 1;
  // The reason for the proposal being withdrawn.
  string reason = 2;
}

message ProposalDepositClaim {
  // The proposal to claim the deposit for.
  uint64 proposal = 1;
  // The expected deposit amount.
  num.v1.Amount deposit_amount = 2;
  // The outcome of the proposal.
  ProposalOutcome outcome = 3;
}

message ValidatorVote {
  // The effecting data for the vote.
  ValidatorVoteBody body = 1;
  // The vote authorization signature is authorizing data.
  penumbra.crypto.decaf377_rdsa.v1.SpendAuthSignature auth_sig = 2;
}

message ValidatorVoteReason {
  string reason = 1;
}

message ValidatorVoteBody {
  // The proposal being voted on.
  uint64 proposal = 1;
  // The vote.
  governance.v1.Vote vote = 2;
  // The validator identity.
  keys.v1.IdentityKey identity_key = 3;
  // The validator governance key.
  keys.v1.GovernanceKey governance_key = 4;
  // A justification of the vote.
  ValidatorVoteReason reason = 5;
}

message DelegatorVote {
  // The effecting data for the vote.
  DelegatorVoteBody body = 1;
  // The vote authorization signature is authorizing data.
  penumbra.crypto.decaf377_rdsa.v1.SpendAuthSignature auth_sig = 2;
  // The vote proof is authorizing data.
  ZKDelegatorVoteProof proof = 3;
}

message DelegatorVoteBody {
  // The proposal being voted on.
  uint64 proposal = 1;
  // The start position of the proposal in the TCT.
  uint64 start_position = 2;
  // The vote.
  governance.v1.Vote vote = 3;
  // The value of the delegation note.
  asset.v1.Value value = 4;
  // The amount of the delegation note, in unbonded penumbra.
  num.v1.Amount unbonded_amount = 5;
  // The nullifier of the input note.
  sct.v1.Nullifier nullifier = 6;
  // The randomized validating key for the spend authorization signature.
  crypto.decaf377_rdsa.v1.SpendVerificationKey rk = 7;
}

message DelegatorVoteView {
  message Visible {
    governance.v1.DelegatorVote delegator_vote = 1;
    shielded_pool.v1.NoteView note = 2;
  }
  message Opaque {
    governance.v1.DelegatorVote delegator_vote = 1;
  }
  oneof delegator_vote {
    Visible visible = 1;
    Opaque opaque = 2;
  }
}

message DelegatorVotePlan {
  // The proposal to vote on.
  uint64 proposal = 1;
  // The start position of the proposal in the TCT.
  uint64 start_position = 2;
  // The vote to cast.
  governance.v1.Vote vote = 3;
  // The delegation note to prove that we can vote.
  shielded_pool.v1.Note staked_note = 4;
  // The position of that delegation note.
  uint64 staked_note_position = 5;
  // The unbonded amount equivalent to the delegation note.
  num.v1.Amount unbonded_amount = 6;
  // The randomizer to use for the proof of spend capability.
  bytes randomizer = 7;
  // The first blinding factor to use for the ZK delegator vote proof.
  bytes proof_blinding_r = 8 [deprecated = true];
  // The second blinding factor to use for the ZK delegator vote proof.
  bytes proof_blinding_s = 9 [deprecated = true];
}

message CommunityPoolDeposit {
  // The value to deposit into the Community Pool.
  asset.v1.Value value = 1;
}

message CommunityPoolSpend {
  // The value to spend from the Community Pool.
  asset.v1.Value value = 1;
}

message CommunityPoolOutput {
  // The value to output from the Community Pool.
  asset.v1.Value value = 1;
  // The address to send the output to.
  keys.v1.Address address = 2;
}

// A vote on a proposal.
message Vote {
  // A vote.
  enum Vote {
    VOTE_UNSPECIFIED = 0;
    VOTE_ABSTAIN = 1;
    VOTE_YES = 2;
    VOTE_NO = 3;
  }

  // The vote.
  Vote vote = 1;
}

// The current state of a proposal.
message ProposalState {
  // Voting is in progress and the proposal has not yet concluded voting or been withdrawn.
  message Voting {}

  // The proposal has been withdrawn but the voting period is not yet concluded.
  message Withdrawn {
    // The reason for the withdrawal.
    string reason = 1;
  }

  // The voting period has ended, and the proposal has been assigned an outcome.
  message Finished {
    ProposalOutcome outcome = 1;
  }

  // The voting period has ended, and the original proposer has claimed their deposit.
  message Claimed {
    ProposalOutcome outcome = 1;
  }

  // The state of the proposal.
  oneof state {
    Voting voting = 2;
    Withdrawn withdrawn = 3;
    Finished finished = 4;
    Claimed claimed = 5;
  }
}

// The outcome of a concluded proposal.
message ProposalOutcome {
  // Whether or not the proposal was withdrawn.
  message Withdrawn {
    // The reason for withdrawing the proposal during the voting period.
    string reason = 1;
  }

  // The proposal was passed.
  message Passed {}

  // The proposal did not pass.
  message Failed {
    // Present if the proposal was withdrawn during the voting period.
    Withdrawn withdrawn = 1;
  }

  // The proposal did not pass, and was slashed.
  message Slashed {
    // Present if the proposal was withdrawn during the voting period.
    Withdrawn withdrawn = 1;
  }

  oneof outcome {
    Passed passed = 1;
    Failed failed = 2;
    Slashed slashed = 3;
  }
}

// A tally of votes on a proposal.
message Tally {
  // The number of votes in favor of the proposal.
  uint64 yes = 1;
  // The number of votes against the proposal.
  uint64 no = 2;
  // The number of abstentions.
  uint64 abstain = 3;
}

// A proposal to be voted upon.
message Proposal {
  // The unique identifier of the proposal.
  uint64 id = 4;

  // A short title for the proposal.
  string title = 1;

  // A natural-language description of the effect of the proposal and its justification.
  string description = 2;

  // The proposal's payload.
  oneof payload {
    Signaling signaling = 5;
    Emergency emergency = 6;
    ParameterChange parameter_change = 7;
    CommunityPoolSpend community_pool_spend = 8;
    UpgradePlan upgrade_plan = 9;
    FreezeIbcClient freeze_ibc_client = 10;
    UnfreezeIbcClient unfreeze_ibc_client = 11;
  }

  // A signaling proposal is meant to register a vote on-chain, but does not have an automatic
  // effect when passed.
  //
  // It optionally contains a reference to a commit which contains code to upgrade the chain.
  message Signaling {
    // The commit to be voted upon, if any is relevant.
    string commit = 1;
  }

  // An emergency proposal can be passed instantaneously by a 1/3 majority of validators, without
  // waiting for the voting period to expire.
  //
  // If the boolean `halt_chain` is set to `true`, then the chain will halt immediately when the
  // proposal is passed.
  message Emergency {
    // If `true`, the chain will halt immediately when the proposal is passed.
    bool halt_chain = 1;
  }

  // A parameter change proposal describes a replacement of the app parameters, which should take
  // effect when the proposal is passed.
  message ParameterChange {
    // DEPRECATED
    ChangedAppParameters old_parameters = 1 [deprecated = true];
    // DEPRECATED
    ChangedAppParameters new_parameters = 2 [deprecated = true];

    // A list of encoded preconditions for the parameter change: even if the
    // proposal passes, the update will not be applied if the value of the
    // precondition does not match the proposal at the time it is enacted.
    //
    // This can be empty, in which case the changes will be applied
    // unconditionally.
    repeated EncodedParameter preconditions = 3;

    // A list of encoded changes to the application parameters.
    repeated EncodedParameter changes = 4;
  }

  // A Community Pool spend proposal describes zero or more transactions to execute on behalf of the Community Pool, with
  // access to its funds, and zero or more scheduled transactions from previous passed proposals to
  // cancel.
  message CommunityPoolSpend {
    // The transaction plan to be executed at the time the proposal is passed. This must be a
    // transaction plan which can be executed by the Community Pool, which means it can't require any witness
    // data or authorization signatures, but it may use the `CommunityPoolSpend` action.
    google.protobuf.Any transaction_plan = 2;
  }

  // An upgrade plan describes a candidate upgrade to be executed at a certain height. If passed, the chain
  // will halt at the specified height.
  message UpgradePlan {
    uint64 height = 1;
  }

  // Freeze an existing IBC client.
  // Like `Emergency` proposals, it is enacted immediately after receiving
  // +2/3 of validator votes.
  message FreezeIbcClient {
    string client_id = 1;
  }

  // Unfreeze an existing IBC client.
  // Like `Emergency` proposals, it is enacted immediately after receiving
  // +2/3 of validator votes.
  message UnfreezeIbcClient {
    string client_id = 1;
  }
}

// All the different kinds of proposals.
enum ProposalKind {
  // To make the linter happy
  PROPOSAL_KIND_UNSPECIFIED = 0;
  PROPOSAL_KIND_SIGNALING = 1;
  PROPOSAL_KIND_EMERGENCY = 2;
  PROPOSAL_KIND_PARAMETER_CHANGE = 3;
  PROPOSAL_KIND_COMMUNITY_POOL_SPEND = 4;
  PROPOSAL_KIND_UPGRADE_PLAN = 5;
  PROPOSAL_KIND_FREEZE_IBC_CLIENT = 6;
  PROPOSAL_KIND_UNFREEZE_IBC_CLIENT = 7;
}

// Query operations for the governance component.
service QueryService {
  rpc ProposalInfo(ProposalInfoRequest) returns (ProposalInfoResponse);
  rpc ProposalList(ProposalListRequest) returns (stream ProposalListResponse);
  rpc ProposalData(ProposalDataRequest) returns (ProposalDataResponse);
  rpc NextProposalId(NextProposalIdRequest) returns (NextProposalIdResponse);
  rpc ValidatorVotes(ValidatorVotesRequest) returns (stream ValidatorVotesResponse);
  rpc VotingPowerAtProposalStart(VotingPowerAtProposalStartRequest) returns (VotingPowerAtProposalStartResponse);
  rpc AllTalliedDelegatorVotesForProposal(AllTalliedDelegatorVotesForProposalRequest) returns (stream AllTalliedDelegatorVotesForProposalResponse);
  // Used for computing voting power ?
  rpc ProposalRateData(ProposalRateDataRequest) returns (stream ProposalRateDataResponse);
}

message ProposalInfoRequest {
  // The proposal id to request information on.
  uint64 proposal_id = 2;
}

message ProposalInfoResponse {
  // The block height at which the proposal started voting.
  uint64 start_block_height = 1;
  // The position of the state commitment tree at which the proposal is considered to have started voting.
  uint64 start_position = 2;
}

message ProposalDataRequest {
  // The proposal id to request information on.
  uint64 proposal_id = 2;
}

message ProposalDataResponse {
  // The proposal metadata.
  Proposal proposal = 1;
  // The block height at which the proposal started voting.
  uint64 start_block_height = 2;
  // The block height at which the proposal ends voting.
  uint64 end_block_height = 3;
  // The position of the state commitment tree at which the proposal is considered to have started voting.
  uint64 start_position = 4;
  // The current state of the proposal.
  ProposalState state = 5;
  // The deposit amount paid for the proposal.
  penumbra.core.num.v1.Amount proposal_deposit_amount = 6;
}

// Requests the validator rate data for a proposal.
message ProposalRateDataRequest {
  // The proposal id to request information on.
  uint64 proposal_id = 2;
}

// The rate data for a single validator.
message ProposalRateDataResponse {
  core.component.stake.v1.RateData rate_data = 1;
}

// Requests the list of all proposals.
message ProposalListRequest {
  // Whether to include proposals that are no longer active.;
  bool inactive = 2;
  // TODO: we could filter by starting block height here?
}

// The data for a single proposal.
message ProposalListResponse {
  // The proposal metadata.
  Proposal proposal = 1;
  // The block height at which the proposal started voting.
  uint64 start_block_height = 2;
  // The block height at which the proposal ends voting.
  uint64 end_block_height = 3;
  // The position of the state commitment tree at which the proposal is considered to have started voting.
  uint64 start_position = 4;
  // The current state of the proposal.
  ProposalState state = 5;
}

// Requests the list of all validator votes for a given proposal.
message ValidatorVotesRequest {
  // The proposal id to request information on.
  uint64 proposal_id = 2;
}

// The data for a single validator vote.
message ValidatorVotesResponse {
  // The vote.
  governance.v1.Vote vote = 1;
  // The validator identity.
  keys.v1.IdentityKey identity_key = 2;
}

// Governance configuration data.
message GovernanceParameters {
  // The number of blocks during which a proposal is voted on.
  uint64 proposal_voting_blocks = 1;
  // The deposit required to create a proposal.
  penumbra.core.num.v1.Amount proposal_deposit_amount = 2;
  // The quorum required for a proposal to be considered valid, as a fraction of the total stake
  // weight of the network.
  string proposal_valid_quorum = 3;
  // The threshold for a proposal to pass voting, as a ratio of "yes" votes over "no" votes.
  string proposal_pass_threshold = 4;
  // The threshold for a proposal to be slashed, regardless of whether the "yes" and "no" votes
  // would have passed it, as a ratio of "no" votes over all total votes.
  string proposal_slash_threshold = 5;
}

// Governance genesis state.
message GenesisContent {
  // Governance parameters.
  GovernanceParameters governance_params = 1;
}

message EncodedParameter {
  // The component name in the `AppParameters`.
  //
  // This is the ProtoJSON-produced key in the `AppParameters` structure.
  string component = 1;
  // The parameter key in the component parameters.
  //
  // This is the ProtoJSON-produced field name in the component's substructure.
  string key = 2;
  // The parameter value.
  //
  // This is the ProtoJSON-encoded value of the parameter.
  string value = 3;
}

// DEPRECATED
message ChangedAppParameters {
  option deprecated = true;
  // Sct module parameters.
  core.component.sct.v1.SctParameters sct_params = 1;
  // Community Pool module parameters.
  core.component.community_pool.v1.CommunityPoolParameters community_pool_params = 2;
  // Governance module parameters.
  core.component.governance.v1.GovernanceParameters governance_params = 3;
  // IBC module parameters.
  core.component.ibc.v1.IbcParameters ibc_params = 4;
  // Stake module parameters.
  core.component.stake.v1.StakeParameters stake_params = 5;
  // Fee module parameters.
  core.component.fee.v1.FeeParameters fee_params = 6;
  // Distributions module parameters.
  core.component.distributions.v1.DistributionsParameters distributions_params = 7;
  // Funding module parameters.
  core.component.funding.v1.FundingParameters funding_params = 8;
  // Shielded pool module parameters
  core.component.shielded_pool.v1.ShieldedPoolParameters shielded_pool_params = 9;
  // DEX component parameters
  core.component.dex.v1.DexParameters dex_params = 10;
  // Auction module parameters.
  core.component.auction.v1.AuctionParameters auction_params = 11;
}

// DEPRECATED
message ChangedAppParametersSet {
  option deprecated = true;
  // The set of app parameters at the time the proposal was submitted.
  ChangedAppParameters old = 1;
  // The new set of parameters the proposal is trying to enact.
  ChangedAppParameters new = 2;
}

message VotingPowerAtProposalStartRequest {
  // The proposal id to request information on.
  uint64 proposal_id = 2;
  // The validator identity key to request information on.
  keys.v1.IdentityKey identity_key = 3;
}

message VotingPowerAtProposalStartResponse {
  // The voting power for the given identity key at the start of the proposal.
  // TODO: since we don't support optional fields in our protos any more,
  // this will be set to 0 if the validator was not active at the start of the proposal.
  // Is this potentially an issue?
  uint64 voting_power = 1;
}

message AllTalliedDelegatorVotesForProposalRequest {
  // The proposal id to request information on.
  uint64 proposal_id = 2;
}

message AllTalliedDelegatorVotesForProposalResponse {
  // The tally of delegator votes for a given validator for the proposal.
  Tally tally = 1;
  // The validator identity associated with the tally.
  keys.v1.IdentityKey identity_key = 2;
}

message NextProposalIdRequest {}

message NextProposalIdResponse {
  // The next proposal ID.
  uint64 next_proposal_id = 1;
}

// The ratio between two numbers, used in governance to describe vote thresholds and quorums.
message Ratio {
  // The numerator.
  uint64 numerator = 1;
  // The denominator.
  uint64 denominator = 2;
}

message EventDelegatorVote {
  // The delegator vote.
  DelegatorVote vote = 1;
  // The corresponding validator's identity key.
  keys.v1.IdentityKey validator_identity_key = 2;
}

message EventProposalDepositClaim {
  // The deposit claim body.
  ProposalDepositClaim deposit_claim = 1;
}

message EventValidatorVote {
  // The validator vote.
  ValidatorVote vote = 1;
  // The validator's voting power at the time of the proposal's start.
  uint64 voting_power = 2;
}

message EventProposalWithdraw {
  // Details on the withdrawn proposal.
  ProposalWithdraw withdraw = 1;
}

message EventProposalSubmit {
  // Details on the submitted proposal.
  ProposalSubmit submit = 1;
  // The start height for the proposal.
  uint64 start_height = 2;
  // The end height for the proposal.
  uint64 end_height = 3;
}

message EventProposalPassed {
  // The passed proposal.
  Proposal proposal = 1;
}

message EventProposalFailed {
  // The failed proposal.
  Proposal proposal = 1;
}

message EventProposalSlashed {
  // The slashed proposal.
  Proposal proposal = 1;
}
